Fix uneven badge spacing

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -296,7 +296,6 @@ h2.followed, h3.followed
     &.lonesome
         margin-bottom: 0
 
-    margin-right: 10px
 
 .header-follow
     display: inline-block
@@ -354,6 +353,9 @@ h1, h2, h3, h4, th
             margin-top: 0
         &:last-child
             margin-bottom: 0
+        &.followed
+          margin-right: 10px
+
     p, .p
         margin: 15px 0
         &:first-child
